--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
-  - type: web
+  - type: static
     name: instagram-data
-    env: static
     plan: free
+    buildCommand: echo "No build needed"
     staticPublishPath: .
 
 
