--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: static
     name: instagram-data
     plan: free
+    env: static
     buildCommand: echo "No build needed"
     staticPublishPath: .
 
